# neutron-thermalization-geant4

./: .gitignore  CMakeLists.txt  README.md  main.cc  root.ipynb
Analisys/: Analisys.ipynb  NeutronData.root  NeutronData_24.0x30.0x9.0.root
include/: ActionInitialization.hh  DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  TransmittedSD.hh
macros/: geometry.py  run1.mac  vis1.mac  vis2.mac
src/: ActionInitialization.cc  DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  TransmittedSD.cc
